<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <include layout="@layout/header" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPlanner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="16dp"
        android:clipToPadding="false"
        android:scrollbars="vertical"  />

        <include layout="@layout/footer" />
    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="80dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/add_button"
        android:src="@drawable/baseline_add_24"
        app:backgroundTint="@color/primaryGreen"/>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
