<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialogRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/zone_add_background"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_zone_header"
        android:textColor="@color/textPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/zoneNameEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/zone_name"
        android:background="@android:color/transparent"
        android:textColor="@color/textPrimary"
        android:padding="10dp" />

    <EditText
        android:id="@+id/zoneFocusEditText"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/zone_focus"
        android:background="@android:color/transparent"
        android:textColor="@color/textPrimary"
        android:padding="10dp"
        android:layout_marginTop="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@android:string/cancel"
            android:textColor="@color/textSecondary"
            android:padding="12dp"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:focusable="true"/>

        <TextView
            android:id="@+id/createButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/add_new_zone_des"
            android:textColor="@color/textPrimary"
            android:textStyle="bold"
            android:padding="12dp"
            android:clickable="true"
            android:focusable="true"/>
    </LinearLayout>
</LinearLayout>
