<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/zonesRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLight">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/header" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <EditText
                android:id="@+id/searchZoneEditText"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/search_zones_hint"
                android:inputType="text"
                android:drawableStart="@android:drawable/ic_menu_search"/>

            <Spinner
                android:id="@+id/sortZoneSpinner"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:entries="@array/sort_options"
                />
        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/zonesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="16dp"
            android:clipToPadding="false"
            android:scrollbars="vertical" />

        <include layout="@layout/footer" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addZoneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="80dp"
        android:contentDescription="@string/add_new_zone_des"
        app:srcCompat="@drawable/baseline_add_24"
        app:backgroundTint="@color/primaryGreen"
        app:tint="@android:color/black" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabOpenPlaner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="80dp"
        android:contentDescription="@string/open_calendar"
        app:srcCompat="@drawable/calendar"
        app:backgroundTint="@color/primaryGreen"/>
</FrameLayout>
